--- a/style.css
+++ b/style.css
@@ -18,3 +18,11 @@ input[type=text] {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+textarea {
+    border: 1px solid #2f6fab;
+    color: Black;
+    background-color: white;
+    width: 100%;
+    padding: 0.1em;
+    overflow: auto;
+}
